--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,93 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
-
+<header class="page-header">
+      <img class="page-header__cat-face" src="https://via.placeholder.com/150x150" alt="Кот с плащом">
+      <a class="page-header__logo logotype">
+        <img class="logotype__image" src="https://via.placeholder.com/150x150" alt="Логотип Cat Energy">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a>Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="page-main">
+      <section class="description">
+        <h1 class="description__title">Функциональное питание для котов</h1>
+        <p class="description__paragraph">Занялся собой? Займись котом!</p>
+        <img class="description__image" src="https://via.placeholder.com/150x150" alt="Банка корма">
+        <a href="form.html" class="description__link button">Подобрать программу</a>
+      </section>
+      <section class="programs">
+        <div class="programs__item--slim">
+          <h3 class="programs__title">Похудение</h3>
+          <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a class="programs__link" href="catalog.html">Каталог Slim</a>
+        </div>
+        <div class="programs__item--weight">
+          <h3 class="programs__title">Набор массы</h3>
+          <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a class="programs__link" href="catalog.html">Каталог Pro</a>
+        </div>
+    </section>
+    <section class="how-work">
+      <h2 class="how-work__title">Как это работает</h2>
+      <p class="how-work__describe how-work__describe--foliage">Функциональное питание содержит только полезные питательные вещества.</p>
+      <p class="how-work__describe how-work__describe--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+      <p class="how-work-describe how-work__describe--fork">Замените один-два рпиема обычной еды на наше функциональное питание.</p>
+      <p class="how-work-describe how-work__describe--scales">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+    </section>
+    <section class="example">
+      <h2 class="example__title">Живой пример</h2>
+      <p class="example__history">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+      <p><b>5 кг</b><small>снижение веса</small></p>
+      <p><b>60 дней</b><small>затрачено времени</small></p>
+      <span class="example__cost">Затраты на питание: 15 000 руб.</span>
+      <div class="example__images slider">
+      <img class="slider__slide1" src="https://via.placeholder.com/150x150">
+      <img class="slider__slide2" src="https://via.placeholder.com/150x150">
+      </div>
+       <p class="slider__toggles slider__toggles">
+            <button class="slider__toggle" type="button">Было</button>
+            <button class="slider__toggle" type="button">Стало</button>
+             </p>
+    </section>
+    </main>
+    <footer class="page-footer">
+      <p class="page-footer__invitation">Приглашаем к сотрудничеству дилеров!</p>
+      <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <a class="page-footer__map">
+        <img class="page-footer__map-image" src="https://via.placeholder.com/150x150">
+      </a>
+      <a class="page-footer__logo logotype">
+        <img class="logotype__image" src="https://via.placeholder.com/150x150" alt="Логотип Cat Energy">
+      </a>
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+          </li>
+        </ul>
+        </div>
+      <div class="page-footer__copyright copyright">
+        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      </div>
+    </footer>
   </body>
 </html>
