Разметка по БЭМ, вторая попытка

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -57,7 +57,7 @@
                   </td>
                 </tr>
               </table>
-              <button type="button" class="product__link button">Заказать</button>
+              <a href="order.html" type="button" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <img class="product__image product__image--pro-chicken1000" src="https://via.placeholder.com/150x150" alt="корм для котов">
@@ -88,7 +88,7 @@
                   </td>
                 </tr>
               </table>
-              <button type="button" class="product__link button">Заказать</button>
+              <a href="order.html" type="button" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <img class="product__image product__image--pro-fish500" src="https://via.placeholder.com/150x150" alt="корм для котов">
@@ -119,7 +119,7 @@
                   </td>
                 </tr>
               </table>
-              <button type="button" class="product__link button">Заказать</button>
+              <a href="order.html" type="button" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <img class="product__image product__image--pro-fish1000" src="https://via.placeholder.com/150x150" alt="корм для котов">
@@ -150,7 +150,7 @@
                   </td>
                 </tr>
               </table>
-              <button type="button" class="product__link button">Заказать</button>
+              <a href="order.html" type="button" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <img class="product__image product__image--slim-buckwheat500" src="https://via.placeholder.com/150x150" alt="корм для котов">
@@ -181,7 +181,7 @@
                   </td>
                 </tr>
               </table>
-              <button type="button" class="product__link button">Заказать</button>
+              <a href="order.html" type="button" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <img class="product__image product__image--slim-buckwheat1000" src="https://via.placeholder.com/150x150" alt="корм для котов">
@@ -212,7 +212,7 @@
                   </td>
                 </tr>
               </table>
-              <button type="button" class="product__link button">Заказать</button>
+              <a href="order.html" type="button" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <img class="product__image product__image--slim-rice500" src="https://via.placeholder.com/150x150" alt="корм для котов">
@@ -243,7 +243,7 @@
                   </td>
                 </tr>
               </table>
-              <button type="button" class="product__link button">Заказать</button>
+              <a href="order.html" type="button" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <h3>показать еще 100500 товаров</h3>
@@ -266,7 +266,7 @@
                   </td>
                 </tr>
               </table>
-              <button type="button" class="product__link button">Заказать</button>
+              <a href="order.html" type="button" class="product__link button">Заказать</a>
         </li>
         <li class="additional__item product">
           <h3>Питевая вода</h3>
@@ -280,7 +280,7 @@
                   </td>
                 </tr>
               </table>
-              <button type="button" class="product__link button">Заказать</button>
+              <a href="order.html" type="button" class="product__link button">Заказать</a>
         </li>
         <li class="additional__item product">
           <h3>Молоко</h3>
@@ -294,7 +294,7 @@
                   </td>
                 </tr>
               </table>
-              <button type="button" class="product__link button">Заказать</button>
+              <a href="order.html" type="button" class="product__link button">Заказать</a>
         </li>
         <li class="additional__item product">
           <h3>Витамины</h3>
@@ -308,7 +308,7 @@
                   </td>
                 </tr>
               </table>
-              <button type="button" class="product__link button">Заказать</button>
+              <a href="order.html" type="button" class="product__link button">Заказать</a>
         </li>
       </ul>
       <div class="additional__gift">
@@ -320,7 +320,7 @@
     <p class="page-footer__invitation">Приглашаем к сотрудничеству дилеров!</p>
       <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       <a class="page-footer__map">
-        <img class="page-footer__map-image" src="https://via.placeholder.com/150x150">
+        <img class="page-footer__map-image" src="https://via.placeholder.com/150x150" alt="карта">
       </a>
       <a class="page-footer__logo logotype">
         <img class="logotype__image" src="https://via.placeholder.com/150x150" alt="Логотип Cat Energy">
