--- a/source/form.html
+++ b/source/form.html
@@ -32,10 +32,10 @@
       <fieldset class="cat">
       <label class="cat__nickname" for="nickname">Имя:<sup>*</sup></label>
       <input class="cat__nickname-input" name="nickname" type="text" id="nickname" placeholder="Барсик">
-      <label class="cat__weight" for="nickname">Вес (кг):<sup>*</sup></label>
-      <input class="cat__weight-input" name="nickname" type="text" id="nickname" placeholder="7">
-      <label class="cat__age" for="nickname">Возраст (лет):</label>
-      <input class="cat__age-input" name="nickname" type="text" id="nickname" placeholder="7">
+      <label class="cat__weight" for="weight">Вес (кг):<sup>*</sup></label>
+      <input class="cat__weight-input" name="nickname" type="text" id="weight" placeholder="7">
+      <label class="cat__age" for="age">Возраст (лет):</label>
+      <input class="cat__age-input" name="nickname" type="text" id="age" placeholder="7">
       </fieldset>
       <fieldset class="programs">
         <input class="programs__slim-input" name="programs" type="radio" id="slim">
@@ -48,9 +48,9 @@
       <fieldset class="owner">
         <legend class="owner__legend">Контактные данные (владельца кота)</legend>
         <label class="owner__email" for="email">e-mail:<sup>*</sup></label>
-        <input class="owner__email-input" id="email" name="email" type="text" placeholder="Kuklachev@gmail.com">
+        <input class="owner__email-input" id="email" name="email" type="email" placeholder="Kuklachev@gmail.com">
         <label class="owner__tel" for="tel">телефон:<sup>*</sup></label>
-        <input class="owner__tel-input" id="tel" name="tel" type="text" placeholder="8 (960) 900-60-90">
+        <input class="owner__tel-input" id="tel" name="tel" type="tel" placeholder="8 (960) 900-60-90" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}">
       </fieldset>
       <fielset class="comment">
       <legend class="comment__legend">Комментарий</legend>
@@ -75,7 +75,7 @@
     <p class="page-footer__invitation">Приглашаем к сотрудничеству дилеров!</p>
       <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       <a class="page-footer__map">
-        <img class="page-footer__map-image" src="https://via.placeholder.com/150x150">
+        <img class="page-footer__map-image" src="https://via.placeholder.com/150x150" alt="карта">
       </a>
       <a class="page-footer__logo logotype">
         <img class="logotype__image" src="https://via.placeholder.com/150x150" alt="Логотип Cat Energy">
