--- a/source/index.html
+++ b/source/index.html
@@ -33,23 +33,27 @@
         <a href="form.html" class="description__link button">Подобрать программу</a>
       </section>
       <section class="programs">
-        <div class="programs__item--slim">
+        <ul class="programs-list">
+        <li class="programs__item programs__item--slim">
           <h3 class="programs__title">Похудение</h3>
           <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a class="programs__link" href="catalog.html">Каталог Slim</a>
-        </div>
-        <div class="programs__item--weight">
+        </li>
+        <li class="programs__item programs__item--weight">
           <h3 class="programs__title">Набор массы</h3>
           <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a class="programs__link" href="catalog.html">Каталог Pro</a>
-        </div>
+        </li>
+      </ul>
     </section>
     <section class="how-work">
       <h2 class="how-work__title">Как это работает</h2>
-      <p class="how-work__describe how-work__describe--foliage">Функциональное питание содержит только полезные питательные вещества.</p>
-      <p class="how-work__describe how-work__describe--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-      <p class="how-work-describe how-work__describe--fork">Замените один-два рпиема обычной еды на наше функциональное питание.</p>
-      <p class="how-work-describe how-work__describe--scales">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+      <ul class="how-work__list">
+        <li class="how-work__describe how-work__describe--foliage">Функциональное питание содержит только полезные питательные вещества.</li>
+        <li class="how-work__describe how-work__describe--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.<li>
+        <li class="how-work__describe how-work__describe--fork">Замените один-два рпиема обычной еды на наше функциональное питание.</li>
+        <li class="how-work__describe how-work__describe--scales">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+      </ul>
     </section>
     <section class="example">
       <h2 class="example__title">Живой пример</h2>
@@ -58,8 +62,8 @@
       <p><b>60 дней</b><small>затрачено времени</small></p>
       <span class="example__cost">Затраты на питание: 15 000 руб.</span>
       <div class="example__images slider">
-      <img class="slider__slide1" src="https://via.placeholder.com/150x150">
-      <img class="slider__slide2" src="https://via.placeholder.com/150x150">
+      <img class="slider__slide1" src="https://via.placeholder.com/150x150" alt="Упитанный кот">
+      <img class="slider__slide2" src="https://via.placeholder.com/150x150" alt="Похудевший Борис">
       </div>
        <p class="slider__toggles slider__toggles">
             <button class="slider__toggle" type="button">Было</button>
@@ -71,7 +75,7 @@
       <p class="page-footer__invitation">Приглашаем к сотрудничеству дилеров!</p>
       <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       <a class="page-footer__map">
-        <img class="page-footer__map-image" src="https://via.placeholder.com/150x150">
+        <img class="page-footer__map-image" src="https://via.placeholder.com/150x150" alt="карта">
       </a>
       <a class="page-footer__logo logotype">
         <img class="logotype__image" src="https://via.placeholder.com/150x150" alt="Логотип Cat Energy">
