доработка шапки таблицы и слайдера

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,6 +33,14 @@
           <h3>cat energy pro 500 г</h3>
           <table class="product__table">
                 <tr>
+                  <td class="visually-hidden">
+                    Данные
+                  </td>
+                  <td class="visually-hidden">
+                    Значение
+                  </td>
+                </tr>
+                <tr>
                   <td class="product__value">
                     Объем
                   </td>
@@ -63,6 +71,14 @@
           <img class="product__image product__image--pro-chicken1000" src="https://via.placeholder.com/150x150" alt="корм для котов">
           <h3>cat energy pro 1000 г</h3>
           <table class="product__table">
+                <tr>
+                  <td class="visually-hidden">
+                    Данные
+                  </td>
+                  <td class="visually-hidden">
+                    Значение
+                  </td>
+                </tr>
                 <tr>
                   <td class="product__value">
                     Объем
@@ -95,6 +111,14 @@
           <h3>cat energy pro 500 г</h3>
           <table class="product__table">
                 <tr>
+                  <td class="visually-hidden">
+                    Данные
+                  </td>
+                  <td class="visually-hidden">
+                    Значение
+                  </td>
+                </tr>
+                <tr>
                   <td class="product__value">
                     Объем
                   </td>
@@ -125,6 +149,14 @@
           <img class="product__image product__image--pro-fish1000" src="https://via.placeholder.com/150x150" alt="корм для котов">
           <h3>cat energy pro 1000 г</h3>
           <table class="product__table">
+                <tr>
+                  <td class="visually-hidden">
+                    Данные
+                  </td>
+                  <td class="visually-hidden">
+                    Значение
+                  </td>
+                </tr>
                 <tr>
                   <td class="product__value">
                     Объем
@@ -157,6 +189,14 @@
           <h3>cat energy slim 500 г</h3>
           <table class="product__table">
                 <tr>
+                  <td class="visually-hidden">
+                    Данные
+                  </td>
+                  <td class="visually-hidden">
+                    Значение
+                  </td>
+                </tr>
+                <tr>
                   <td class="product__value">
                     Объем
                   </td>
@@ -188,6 +228,14 @@
           <h3>cat energy slim 1000 г</h3>
           <table class="product__table">
                 <tr>
+                  <td class="visually-hidden">
+                    Данные
+                  </td>
+                  <td class="visually-hidden">
+                    Значение
+                  </td>
+                </tr>
+                <tr>
                   <td class="product__value">
                     Объем
                   </td>
@@ -218,6 +266,14 @@
           <img class="product__image product__image--slim-rice500" src="https://via.placeholder.com/150x150" alt="корм для котов">
           <h3>cat energy slim 500 г</h3>
           <table class="product__table">
+                <tr>
+                  <td class="visually-hidden">
+                    Данные
+                  </td>
+                  <td class="visually-hidden">
+                    Значение
+                  </td>
+                </tr>
                 <tr>
                   <td class="product__value">
                     Объем
@@ -258,6 +314,14 @@
           <h3>Сахарозаменитель</h3>
           <table class="product__table">
                 <tr>
+                  <td class="visually-hidden">
+                    Данные
+                  </td>
+                  <td class="visually-hidden">
+                    Значение
+                  </td>
+                </tr>
+                <tr>
                   <td class="product__value">
                     1 упаковка (100 г)
                   </td>
@@ -271,6 +335,14 @@
         <li class="additional__item product">
           <h3>Питевая вода</h3>
           <table class="product__table">
+                <tr>
+                  <td class="visually-hidden">
+                    Данные
+                  </td>
+                  <td class="visually-hidden">
+                    Значение
+                  </td>
+                </tr>
                 <tr>
                   <td class="product__value">
                     5 литров
@@ -286,6 +358,14 @@
           <h3>Молоко</h3>
           <table class="product__table">
                 <tr>
+                  <td class="visually-hidden">
+                    Данные
+                  </td>
+                  <td class="visually-hidden">
+                    Значение
+                  </td>
+                </tr>
+                <tr>
                   <td class="product__value">
                     1 литр
                   </td>
@@ -299,6 +379,14 @@
         <li class="additional__item product">
           <h3>Витамины</h3>
           <table class="product__table">
+                <tr>
+                  <td class="visually-hidden">
+                    Данные
+                  </td>
+                  <td class="visually-hidden">
+                    Значение
+                  </td>
+                </tr>
                 <tr>
                   <td class="product__value">
                     1 упаковка (30 г)
