--- a/source/index.html
+++ b/source/index.html
@@ -56,19 +56,21 @@
       </ul>
     </section>
     <section class="example">
+      <div class="example__wrapper slider">
       <h2 class="example__title">Живой пример</h2>
       <p class="example__history">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
       <p><b>5 кг</b><small>снижение веса</small></p>
       <p><b>60 дней</b><small>затрачено времени</small></p>
       <span class="example__cost">Затраты на питание: 15 000 руб.</span>
-      <div class="example__images slider">
+      <div class="example__images slider__list">
       <img class="slider__slide1" src="https://via.placeholder.com/150x150" alt="Упитанный кот">
       <img class="slider__slide2" src="https://via.placeholder.com/150x150" alt="Похудевший Борис">
       </div>
-       <p class="slider__toggles slider__toggles">
+       <p class="example__toggles slider__toggles">
             <button class="slider__toggle" type="button">Было</button>
             <button class="slider__toggle" type="button">Стало</button>
-             </p>
+        </p>
+      </div>
     </section>
     </main>
     <footer class="page-footer">
