--- a/source/catalog.html
+++ b/source/catalog.html
@@ -65,7 +65,7 @@
                   </td>
                 </tr>
               </table>
-              <a href="order.html" type="button" class="product__link button">Заказать</a>
+              <a href="order.html" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <img class="product__image product__image--pro-chicken1000" src="https://via.placeholder.com/150x150" alt="корм для котов">
@@ -104,7 +104,7 @@
                   </td>
                 </tr>
               </table>
-              <a href="order.html" type="button" class="product__link button">Заказать</a>
+              <a href="order.html" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <img class="product__image product__image--pro-fish500" src="https://via.placeholder.com/150x150" alt="корм для котов">
@@ -143,7 +143,7 @@
                   </td>
                 </tr>
               </table>
-              <a href="order.html" type="button" class="product__link button">Заказать</a>
+              <a href="order.html" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <img class="product__image product__image--pro-fish1000" src="https://via.placeholder.com/150x150" alt="корм для котов">
@@ -182,7 +182,7 @@
                   </td>
                 </tr>
               </table>
-              <a href="order.html" type="button" class="product__link button">Заказать</a>
+              <a href="order.html" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <img class="product__image product__image--slim-buckwheat500" src="https://via.placeholder.com/150x150" alt="корм для котов">
@@ -221,7 +221,7 @@
                   </td>
                 </tr>
               </table>
-              <a href="order.html" type="button" class="product__link button">Заказать</a>
+              <a href="order.html" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <img class="product__image product__image--slim-buckwheat1000" src="https://via.placeholder.com/150x150" alt="корм для котов">
@@ -260,7 +260,7 @@
                   </td>
                 </tr>
               </table>
-              <a href="order.html" type="button" class="product__link button">Заказать</a>
+              <a href="order.html" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <img class="product__image product__image--slim-rice500" src="https://via.placeholder.com/150x150" alt="корм для котов">
@@ -299,7 +299,7 @@
                   </td>
                 </tr>
               </table>
-              <a href="order.html" type="button" class="product__link button">Заказать</a>
+              <a href="order.html" class="product__link button">Заказать</a>
         </li>
         <li class="main-catalog__item product">
           <h3>показать еще 100500 товаров</h3>
@@ -330,7 +330,7 @@
                   </td>
                 </tr>
               </table>
-              <a href="order.html" type="button" class="product__link button">Заказать</a>
+              <a href="order.html" class="product__link button">Заказать</a>
         </li>
         <li class="additional__item product">
           <h3>Питевая вода</h3>
@@ -352,7 +352,7 @@
                   </td>
                 </tr>
               </table>
-              <a href="order.html" type="button" class="product__link button">Заказать</a>
+              <a href="order.html" class="product__link button">Заказать</a>
         </li>
         <li class="additional__item product">
           <h3>Молоко</h3>
@@ -374,7 +374,7 @@
                   </td>
                 </tr>
               </table>
-              <a href="order.html" type="button" class="product__link button">Заказать</a>
+              <a href="order.html" class="product__link button">Заказать</a>
         </li>
         <li class="additional__item product">
           <h3>Витамины</h3>
@@ -396,7 +396,7 @@
                   </td>
                 </tr>
               </table>
-              <a href="order.html" type="button" class="product__link button">Заказать</a>
+              <a href="order.html" class="product__link button">Заказать</a>
         </li>
       </ul>
       <div class="additional__gift">
