--- a/source/form.html
+++ b/source/form.html
@@ -52,11 +52,11 @@
         <label class="owner__tel" for="tel">телефон:<sup>*</sup></label>
         <input class="owner__tel-input" id="tel" name="tel" type="tel" placeholder="8 (960) 900-60-90" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}">
       </fieldset>
-      <fielset class="comment">
+      <fieldset class="comment">
       <legend class="comment__legend">Комментарий</legend>
       <textarea class="comment__texterea" rows="5" id="comment" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
-      </fielset>
-      <fielset class="add-product">
+      </fieldset>
+      <fieldset class="add-product">
         <legend class="add-product__legend">Дополнительно</legend>
         <input class="add-product__substitute-input" name="substitute" type="checkbox" id="substitute" checked>
         <label class="add-product__substitute" for="substitute">сахарозаменитель</label>
@@ -68,7 +68,7 @@
         <label class="add-product__vitamins" for="vitamins">витамины</label>
         <button class="add-product__button button">Отправить заявку</button>
         <small><sup>*</sup>&mdash;Обязательные поля</small>
-      </fielset>
+      </fieldset>
      </form>
     </main>
     <footer class="page-footer">
