--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,12 +33,12 @@
           <h3>cat energy pro 500 г</h3>
           <table class="product__table">
                 <tr>
-                  <td class="visually-hidden">
+                  <th class="visually-hidden">
                     Данные
-                  </td>
-                  <td class="visually-hidden">
+                  </th>
+                  <th class="visually-hidden">
                     Значение
-                  </td>
+                  </th>
                 </tr>
                 <tr>
                   <td class="product__value">
@@ -72,12 +72,12 @@
           <h3>cat energy pro 1000 г</h3>
           <table class="product__table">
                 <tr>
-                  <td class="visually-hidden">
+                  <th class="visually-hidden">
                     Данные
-                  </td>
-                  <td class="visually-hidden">
+                  </th>
+                  <th class="visually-hidden">
                     Значение
-                  </td>
+                  </th>
                 </tr>
                 <tr>
                   <td class="product__value">
@@ -111,12 +111,12 @@
           <h3>cat energy pro 500 г</h3>
           <table class="product__table">
                 <tr>
-                  <td class="visually-hidden">
+                  <th class="visually-hidden">
                     Данные
-                  </td>
-                  <td class="visually-hidden">
+                  </th>
+                  <th class="visually-hidden">
                     Значение
-                  </td>
+                  </th>
                 </tr>
                 <tr>
                   <td class="product__value">
@@ -150,12 +150,12 @@
           <h3>cat energy pro 1000 г</h3>
           <table class="product__table">
                 <tr>
-                  <td class="visually-hidden">
+                  <th class="visually-hidden">
                     Данные
-                  </td>
-                  <td class="visually-hidden">
+                  </th>
+                  <th class="visually-hidden">
                     Значение
-                  </td>
+                  </th>
                 </tr>
                 <tr>
                   <td class="product__value">
@@ -189,12 +189,12 @@
           <h3>cat energy slim 500 г</h3>
           <table class="product__table">
                 <tr>
-                  <td class="visually-hidden">
+                  <th class="visually-hidden">
                     Данные
-                  </td>
-                  <td class="visually-hidden">
+                  </th>
+                  <th class="visually-hidden">
                     Значение
-                  </td>
+                  </th>
                 </tr>
                 <tr>
                   <td class="product__value">
@@ -228,12 +228,12 @@
           <h3>cat energy slim 1000 г</h3>
           <table class="product__table">
                 <tr>
-                  <td class="visually-hidden">
+                  <th class="visually-hidden">
                     Данные
-                  </td>
-                  <td class="visually-hidden">
+                  </th>
+                  <th class="visually-hidden">
                     Значение
-                  </td>
+                  </th>
                 </tr>
                 <tr>
                   <td class="product__value">
@@ -267,12 +267,12 @@
           <h3>cat energy slim 500 г</h3>
           <table class="product__table">
                 <tr>
-                  <td class="visually-hidden">
+                  <th class="visually-hidden">
                     Данные
-                  </td>
-                  <td class="visually-hidden">
+                  </th>
+                  <th class="visually-hidden">
                     Значение
-                  </td>
+                  </th>
                 </tr>
                 <tr>
                   <td class="product__value">
@@ -314,12 +314,12 @@
           <h3>Сахарозаменитель</h3>
           <table class="product__table">
                 <tr>
-                  <td class="visually-hidden">
+                  <th class="visually-hidden">
                     Данные
-                  </td>
-                  <td class="visually-hidden">
+                  </th>
+                  <th class="visually-hidden">
                     Значение
-                  </td>
+                  </th>
                 </tr>
                 <tr>
                   <td class="product__value">
@@ -336,12 +336,12 @@
           <h3>Питевая вода</h3>
           <table class="product__table">
                 <tr>
-                  <td class="visually-hidden">
+                  <th class="visually-hidden">
                     Данные
-                  </td>
-                  <td class="visually-hidden">
+                  </th>
+                  <th class="visually-hidden">
                     Значение
-                  </td>
+                  </th>
                 </tr>
                 <tr>
                   <td class="product__value">
@@ -358,12 +358,12 @@
           <h3>Молоко</h3>
           <table class="product__table">
                 <tr>
-                  <td class="visually-hidden">
+                  <th class="visually-hidden">
                     Данные
-                  </td>
-                  <td class="visually-hidden">
+                  </th>
+                  <th class="visually-hidden">
                     Значение
-                  </td>
+                  </th>
                 </tr>
                 <tr>
                   <td class="product__value">
@@ -380,12 +380,12 @@
           <h3>Витамины</h3>
           <table class="product__table">
                 <tr>
-                  <td class="visually-hidden">
+                  <th class="visually-hidden">
                     Данные
-                  </td>
-                  <td class="visually-hidden">
+                  </th>
+                  <th class="visually-hidden">
                     Значение
-                  </td>
+                  </th>
                 </tr>
                 <tr>
                   <td class="product__value">
