--- a/source/index.html
+++ b/source/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   </head>
   <body>
 <header class="page-header">
-      <img class="page-header__cat-face" src="https://via.placeholder.com/150x150" alt="Кот с плащом">
       <a class="page-header__logo logotype">
-        <img class="logotype__image" src="https://via.placeholder.com/150x150" alt="Логотип Cat Energy">
+        <img class="logotype__image" src="img/logo-mobile.svg" width="190px" height="38px" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <ul class="main-nav__list site-list">
+        <ul class="main-nav__list site-list visually-hidden">
           <li class="site-list__item site-list__item--active">
             <a>Главная</a>
           </li>
@@ -30,7 +30,7 @@
       <section class="description">
         <h1 class="description__title">Функциональное питание для котов</h1>
         <p class="description__paragraph">Занялся собой? Займись котом!</p>
-        <img class="description__image" src="https://via.placeholder.com/150x150" alt="Банка корма">
+        <im class="description__image" src="https://via.placeholder.com/150x150" alt="Банка корма">
         <a href="form.html" class="description__link button">Подобрать программу</a>
       </section>
       <section class="programs">
@@ -52,7 +52,7 @@
       <ul class="how-work__list">
         <li class="how-work__describe how-work__describe--foliage">Функциональное питание содержит только полезные питательные вещества.</li>
         <li class="how-work__describe how-work__describe--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.<li>
-        <li class="how-work__describe how-work__describe--fork">Замените один-два рпиема обычной еды на наше функциональное питание.</li>
+        <li class="how-work__describe how-work__describe--fork">Замените один-два приема обычной еды на наше функциональное питание.</li>
         <li class="how-work__describe how-work__describe--scales">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
       </ul>
     </section>
@@ -60,12 +60,14 @@
       <div class="example__wrapper slider">
       <h2 class="example__title">Живой пример</h2>
       <p class="example__history">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+      <div class="example__indicators">
       <p><b>5 кг</b><small>снижение веса</small></p>
       <p><b>60 дней</b><small>затрачено времени</small></p>
+      </div>
       <span class="example__cost">Затраты на питание: 15 000 руб.</span>
       <div class="example__images slider__list">
-      <img class="slider__slide1" src="https://via.placeholder.com/150x150" alt="Упитанный кот">
-      <img class="slider__slide2" src="https://via.placeholder.com/150x150" alt="Похудевший Борис">
+      <img class="slider__slide1" src="../img/before-mobile@1x.png" width="320px" height="240px" alt="Упитанный кот">
+      <img class="slider__slide2" src="../img/after-mobile@1x.png" width="320px" height="240px" alt="Похудевший Борис">
       </div>
        <p class="example__toggles slider__toggles">
             <button class="slider__toggle" type="button">Было</button>
@@ -75,29 +77,31 @@
     </section>
     </main>
     <footer class="page-footer">
+    <div class="page-footer__data">
       <p class="page-footer__invitation">Приглашаем к сотрудничеству дилеров!</p>
       <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+    </div>
       <a class="page-footer__map">
-        <img class="page-footer__map-image" src="https://via.placeholder.com/150x150" alt="карта">
+        <img class="page-footer__map-image" src="../img/bg-map-mobile@1x.png" width="320px" height="400px" alt="карта">
       </a>
       <a class="page-footer__logo logotype">
-        <img class="logotype__image" src="https://via.placeholder.com/150x150" alt="Логотип Cat Energy">
+        <img class="page-footer__logo-image logotype__image" src="../img/logo-footer.svg" width="128px" height="24px" alt="Логотип Cat Energy">
       </a>
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span class="visually-hidden">Мы в Инстаграме</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Мы в Фейсбуке</span></a>
           </li>
         </ul>
         </div>
       <div class="page-footer__copyright copyright">
-        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
     </footer>
   </body>
