--- a/source/form.html
+++ b/source/form.html
@@ -51,7 +51,7 @@
       </div>
       </fieldset>
       <fieldset class="owner">
-        <legend class="owner__legend">Контактные данные (владельца кота)</legend>
+        <legend>Контактные данные (владельца кота)</legend>
         <label class="owner__email" for="email">e-mail:<sup>*</sup></label>
         <input class="owner__email-input" id="email" name="email" type="email" placeholder="Kuklachev@gmail.com">
         <label class="owner__tel" for="tel">телефон:<sup>*</sup></label>
