--- a/source/index.html
+++ b/source/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   </head>
   <body>
 <header class="page-header">
-      <a class="page-header__logo logotype">
-        <img class="logotype__image" src="img/logo-mobile.svg" width="190px" height="38px" alt="Логотип Cat Energy">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="190px" height="38px" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -34,7 +36,7 @@
         <a href="form.html" class="description__link button">Подобрать программу</a>
       </section>
       <section class="programs">
-        <ul class="programs-list">
+        <ul class="programs__list">
         <li class="programs__item programs__item--slim">
           <h3 class="programs__title">Похудение</h3>
           <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
@@ -67,7 +69,7 @@
       <span class="example__cost">Затраты на питание: 15 000 руб.</span>
       <div class="example__images slider__list">
       <img class="slider__slide1" src="../img/before-mobile@1x.png" width="320px" height="240px" alt="Упитанный кот">
-      <img class="slider__slide2" src="../img/after-mobile@1x.png" width="320px" height="240px" alt="Похудевший Борис">
+      <ig class="slider__slide2" src="../img/after-mobile@1x.png" width="320px" height="240px" alt="Похудевший Борис">
       </div>
        <p class="example__toggles slider__toggles">
             <button class="slider__toggle" type="button">Было</button>
@@ -82,7 +84,7 @@
       <p class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
       <a class="page-footer__map">
-        <img class="page-footer__map-image" src="../img/bg-map-mobile@1x.png" width="320px" height="400px" alt="карта">
+        <!--<img class="page-footer__map-image" src="../img/bg-map-mobile@1x.png" width="320px" height="363px" alt="карта">-->
       </a>
       <a class="page-footer__logo logotype">
         <img class="page-footer__logo-image logotype__image" src="../img/logo-footer.svg" width="128px" height="24px" alt="Логотип Cat Energy">
